--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "bson": "^4.0.2",
         "is-buffer": "^2.0.3",
+        "moment": "^2.24.0",
         "vuex": "^3.1.1"
     }
 }
