--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "dependencies": {
         "bson": "^4.0.2",
         "is-buffer": "^2.0.3",
+        "laravel-echo": "^1.5.4",
         "moment": "^2.24.0",
+        "pusher-js": "^5.0.1",
+        "vue-chat-scroll": "^1.3.5",
         "vuex": "^3.1.1"
     }
 }
